# a-faster-imdb-rest-api

./: Cargo.toml  README.md
src/: main.rs
src/database/: collection.rs  film.rs  mod.rs  player.rs
src/router/: mod.rs
