[package]
name = "processor-api-rust"
version = "0.1.0"
authors = ["Pachacho <quino.terrasa+dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more packages at https://crates.io/

# Requires OpenSSL to be installed on your OS
[dependencies]
futures = "0.3"
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "0.3.11"
r2d2 = "0.8.3"
r2d2-mongodb = "*"